--- a/src/main/java/lagatrix/gui/views/main/form/PartitionView.form
+++ b/src/main/java/lagatrix/gui/views/main/form/PartitionView.form
@@ -44,12 +44,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Container class="lagatrix.client.gui.components.complex.containers.PanelContainer" name="panelContainer">
-          <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
-            </Property>
-          </Properties>
+        <Container class="lagatrix.gui.components.complex.containers.PanelContainer" name="panelContainer">
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
         </Container>
