--- a/src/main/java/lagatrix/gui/components/complex/fragment/Header.form
+++ b/src/main/java/lagatrix/gui/components/complex/fragment/Header.form
@@ -44,7 +44,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="lagatrix.client.gui.components.simple.buttons.MiniRoundButton" name="dismissButton">
+    <Component class="lagatrix.gui.components.simple.buttons.MiniRoundButton" name="dismissButton">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="ff" red="ff" type="rgb"/>
@@ -54,7 +54,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="dismissButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="lagatrix.client.gui.components.simple.buttons.MiniRoundButton" name="closeButton">
+    <Component class="lagatrix.gui.components.simple.buttons.MiniRoundButton" name="closeButton">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="closeButtonActionPerformed"/>
       </Events>
