--- a/src/main/java/lagatrix/gui/components/complex/panels/CPUPanel.form
+++ b/src/main/java/lagatrix/gui/components/complex/panels/CPUPanel.form
@@ -49,7 +49,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="lagatrix.client.gui.components.simple.graphics.CircleGraphic" name="graphicUse">
+    <Container class="lagatrix.gui.components.simple.graphics.CircleGraphic" name="graphicUse">
       <Properties>
         <Property name="backgroundCircleColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="df" green="df" red="df" type="rgb"/>
@@ -70,7 +70,7 @@
         </DimensionLayout>
       </Layout>
     </Container>
-    <Container class="lagatrix.client.gui.components.simple.graphics.CircleGraphic" name="graphicTemp">
+    <Container class="lagatrix.gui.components.simple.graphics.CircleGraphic" name="graphicTemp">
       <Properties>
         <Property name="backgroundCircleColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="df" green="df" red="df" type="rgb"/>
