--- a/src/main/java/lagatrix/gui/components/complex/panels/PartitionPanel.form
+++ b/src/main/java/lagatrix/gui/components/complex/panels/PartitionPanel.form
@@ -46,7 +46,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="lagatrix.client.gui.components.simple.graphics.CircleGraphic" name="graphicUse">
+    <Container class="lagatrix.gui.components.simple.graphics.CircleGraphic" name="graphicUse">
       <Properties>
         <Property name="backgroundCircleColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="df" green="df" red="df" type="rgb"/>
