--- a/src/main/java/lagatrix/gui/views/formulary/EventFormularyView.form
+++ b/src/main/java/lagatrix/gui/views/formulary/EventFormularyView.form
@@ -65,33 +65,33 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="lagatrix.client.gui.components.simple.input.DefaultInput" name="commandInput">
+    <Component class="lagatrix.gui.components.simple.input.DefaultInput" name="commandInput">
       <Properties>
         <Property name="defaultValue" type="java.lang.String" value=""/>
         <Property name="descriptionText" type="java.lang.String" value="COMANDO"/>
       </Properties>
     </Component>
-    <Component class="lagatrix.client.gui.components.simple.input.DefaultInput" name="dayMonthInput">
+    <Component class="lagatrix.gui.components.simple.input.DefaultInput" name="dayMonthInput">
       <Properties>
         <Property name="descriptionText" type="java.lang.String" value="D&#xcd;A DEL MES"/>
       </Properties>
     </Component>
-    <Component class="lagatrix.client.gui.components.simple.input.DefaultInput" name="dayWeekInput">
+    <Component class="lagatrix.gui.components.simple.input.DefaultInput" name="dayWeekInput">
       <Properties>
         <Property name="descriptionText" type="java.lang.String" value="D&#xcd;A DE LA SEMANA"/>
       </Properties>
     </Component>
-    <Component class="lagatrix.client.gui.components.simple.input.DefaultInput" name="minuteInput">
+    <Component class="lagatrix.gui.components.simple.input.DefaultInput" name="minuteInput">
       <Properties>
         <Property name="descriptionText" type="java.lang.String" value="MINUTO"/>
       </Properties>
     </Component>
-    <Component class="lagatrix.client.gui.components.simple.input.DefaultInput" name="monthInput">
+    <Component class="lagatrix.gui.components.simple.input.DefaultInput" name="monthInput">
       <Properties>
         <Property name="descriptionText" type="java.lang.String" value="MES"/>
       </Properties>
     </Component>
-    <Component class="lagatrix.client.gui.components.simple.input.DefaultInput" name="hourInput">
+    <Component class="lagatrix.gui.components.simple.input.DefaultInput" name="hourInput">
       <Properties>
         <Property name="descriptionText" type="java.lang.String" value="HORA"/>
       </Properties>
