--- a/src/main/java/lagatrix/gui/window/LoginWindow.form
+++ b/src/main/java/lagatrix/gui/window/LoginWindow.form
@@ -37,7 +37,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="lagatrix.client.gui.components.simple.RoundPanel" name="mainPanel">
+    <Container class="lagatrix.gui.components.simple.RoundPanel" name="mainPanel">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -85,14 +85,14 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="lagatrix.client.gui.components.complex.fragment.Header" name="header">
+        <Component class="lagatrix.gui.components.complex.fragment.Header" name="header">
           <Properties>
             <Property name="father" type="javax.swing.JFrame" editor="org.netbeans.modules.form.ComponentChooserEditor">
               <ComponentRef name="Form"/>
             </Property>
           </Properties>
         </Component>
-        <Component class="lagatrix.client.gui.components.simple.buttons.DefaulRoundButton" name="cancelButton">
+        <Component class="lagatrix.gui.components.simple.buttons.DefaulRoundButton" name="cancelButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Cancelar"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -103,7 +103,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cancelButtonActionPerformed"/>
           </Events>
         </Component>
-        <Component class="lagatrix.client.gui.components.simple.buttons.DefaulRoundButton" name="loginButton">
+        <Component class="lagatrix.gui.components.simple.buttons.DefaulRoundButton" name="loginButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Acceder"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -114,13 +114,13 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loginButtonActionPerformed"/>
           </Events>
         </Component>
-        <Component class="lagatrix.client.gui.components.simple.input.DefaultInput" name="userInput">
+        <Component class="lagatrix.gui.components.simple.input.DefaultInput" name="userInput">
           <Properties>
             <Property name="defaultValue" type="java.lang.String" value=""/>
             <Property name="descriptionText" type="java.lang.String" value="USUARIO"/>
           </Properties>
         </Component>
-        <Component class="lagatrix.client.gui.components.simple.input.PasswordInput" name="passwordInput">
+        <Component class="lagatrix.gui.components.simple.input.PasswordInput" name="passwordInput">
           <Properties>
             <Property name="defaultValue" type="java.lang.String" value=""/>
             <Property name="descriptionText" type="java.lang.String" value="CONTRASE&#xd1;A"/>
