Bad scaled in RAMPanel

--- a/src/main/java/lagatrix/gui/views/main/form/MonitoringView.form
+++ b/src/main/java/lagatrix/gui/views/main/form/MonitoringView.form
@@ -30,10 +30,10 @@
                   <Component id="cpuPanel" min="-2" max="-2" attributes="0"/>
                   <Component id="gpuPanel" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="94" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="osPanel" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="ramPanel" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="osPanel" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
           </Group>
@@ -46,12 +46,12 @@
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="osPanel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="74" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
                       <Component id="ramPanel" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="cpuPanel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
                       <Component id="gpuPanel" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
