--- a/src/main/java/lagatrix/gui/components/complex/panels/OSPanel.form
+++ b/src/main/java/lagatrix/gui/components/complex/panels/OSPanel.form
@@ -21,15 +21,20 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="nameLabel" max="32767" attributes="0"/>
-                  <Component id="kernel" pref="130" max="32767" attributes="0"/>
-                  <Component id="hostname" alignment="0" pref="130" max="32767" attributes="0"/>
-                  <Component id="distroImage" alignment="0" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="kernel" alignment="0" pref="177" max="32767" attributes="0"/>
+                  <Component id="hostname" alignment="0" max="32767" attributes="0"/>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="nameLabel" min="-2" pref="130" max="-2" attributes="0"/>
+                  <Component id="distroImage" min="-2" pref="130" max="-2" attributes="0"/>
+              </Group>
           </Group>
       </Group>
     </DimensionLayout>
@@ -37,7 +42,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="nameLabel" pref="35" max="32767" attributes="0"/>
+              <Component id="nameLabel" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="distroImage" min="-2" pref="88" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -87,6 +92,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="hostname">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="cc" red="0" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="sansserif" size="14" style="0"/>
         </Property>
