--- a/src/main/java/lagatrix/gui/window/FormularyWindow.form
+++ b/src/main/java/lagatrix/gui/window/FormularyWindow.form
@@ -57,12 +57,14 @@
                   <Component id="containerPanel" min="-2" pref="536" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
+              <Component id="header" alignment="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                  <Component id="header" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="containerPanel" min="-2" pref="212" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -120,6 +122,13 @@
             </CodeStatement>
           </LayoutCode>
         </Container>
+        <Component class="lagatrix.gui.components.complex.fragment.Header" name="header">
+          <Properties>
+            <Property name="father" type="javax.swing.JFrame" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="this" type="code"/>
+            </Property>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
