--- a/src/main/java/lagatrix/gui/views/main/form/EventView.form
+++ b/src/main/java/lagatrix/gui/views/main/form/EventView.form
@@ -140,6 +140,7 @@
     <Component class="lagatrix.gui.components.simple.buttons.DefaulRoundButton" name="editButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Editar"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editButtonActionPerformed"/>
@@ -148,6 +149,7 @@
     <Component class="lagatrix.gui.components.simple.buttons.DefaulRoundButton" name="deleteButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Eliminar"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteButtonActionPerformed"/>
