--- a/src/main/java/lagatrix/gui/window/MainWindow.form
+++ b/src/main/java/lagatrix/gui/window/MainWindow.form
@@ -69,7 +69,7 @@
       <SubComponents>
         <Component class="lagatrix.gui.components.complex.fragment.Header" name="header">
           <Properties>
-            <Property name="father" type="javax.swing.JFrame" editor="org.netbeans.modules.form.ComponentChooserEditor">
+            <Property name="father" type="java.awt.Window" editor="org.netbeans.modules.form.ComponentChooserEditor">
               <ComponentRef name="Form"/>
             </Property>
           </Properties>
